; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nft_set_hash.c_nft_rhash_flush.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nft_set_hash.c_nft_rhash_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { i32 }
%struct.nft_set = type { i32 }
%struct.nft_rhash_elem = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net*, %struct.nft_set*, i8*)* @nft_rhash_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nft_rhash_flush(%struct.net* %0, %struct.nft_set* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net*, align 8
  %6 = alloca %struct.nft_set*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.nft_rhash_elem*, align 8
  store %struct.net* %0, %struct.net** %5, align 8
  store %struct.nft_set* %1, %struct.nft_set** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = bitcast i8* %9 to %struct.nft_rhash_elem*
  store %struct.nft_rhash_elem* %10, %struct.nft_rhash_elem** %8, align 8
  %11 = load %struct.nft_rhash_elem*, %struct.nft_rhash_elem** %8, align 8
  %12 = getelementptr inbounds %struct.nft_rhash_elem, %struct.nft_rhash_elem* %11, i32 0, i32 0
  %13 = call i32 @nft_set_elem_mark_busy(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load %struct.net*, %struct.net** %5, align 8
  %17 = load %struct.nft_rhash_elem*, %struct.nft_rhash_elem** %8, align 8
  %18 = getelementptr inbounds %struct.nft_rhash_elem, %struct.nft_rhash_elem* %17, i32 0, i32 0
  %19 = call i32 @nft_is_active(%struct.net* %16, i32* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %27, label %21

21:                                               ; preds = %15, %3
  %22 = load %struct.net*, %struct.net** %5, align 8
  %23 = load %struct.nft_set*, %struct.nft_set** %6, align 8
  %24 = load %struct.nft_rhash_elem*, %struct.nft_rhash_elem** %8, align 8
  %25 = getelementptr inbounds %struct.nft_rhash_elem, %struct.nft_rhash_elem* %24, i32 0, i32 0
  %26 = call i32 @nft_set_elem_change_active(%struct.net* %22, %struct.nft_set* %23, i32* %25)
  store i32 1, i32* %4, align 4
  br label %28

27:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %27, %21
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @nft_set_elem_mark_busy(i32*) #1

declare dso_local i32 @nft_is_active(%struct.net*, i32*) #1

declare dso_local i32 @nft_set_elem_change_active(%struct.net*, %struct.nft_set*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
